BE/ game continue